fix same layout function & add dark mode

--- a/css/LAT_Custom.css
+++ b/css/LAT_Custom.css
@@ -14,7 +14,7 @@
     }
     
     .container-fluid .row {
-        /* background: white; */
+        background: white;
         border-radius: 10px;
     }
     
